price changes - nov 2017

--- a/menu.html
+++ b/menu.html
@@ -66,12 +66,12 @@
                 <div class="divider"></div>
                 <span>Tea infused with fruity flavours</span>
                 <div class="pricing pricing-first">
-                    <span class="bold">Kids</span>
-                    <span>$3.49</span>
+                    <span class="bold">Small</span>
+                    <span>$3.99</span>
                 </div>
                 <div class="pricing">
                     <span class="bold">Regular</span>
-                    <span>$4.29</span>
+                    <span>$4.59</span>
                 </div>
                 <div class="pricing foot-note">
                     <span>All Fruit teas are available with black or green tea base.</span>
@@ -89,7 +89,7 @@
                 <span>Milk with tea</span>
                 <div class="pricing pricing-first">
                     <span class="bold">Regular</span>
-                    <span>$4.29</span>
+                    <span>$4.59</span>
                 </div>
                 <div class="color-circle right orange"></div>
             </div>
@@ -191,12 +191,12 @@
                 <div class="divider"></div>
                 <span>Yummy, delicious and cold.</span>
                 <div class="pricing pricing-first">
-                    <span class="bold">Kids</span>
-                    <span>$3.99</span>
+                    <span class="bold">Small</span>
+                    <span>$4.49</span>
                 </div>
                 <div class="pricing">
                     <span class="bold">Regular</span>
-                    <span>$5.29</span>
+                    <span>$5.99</span>
                 </div>
                 <div class="color-circle orange"></div>
             </div>
@@ -257,7 +257,7 @@
                 <h6 class="parallax-intro-header">
                     Our smoothies are <em>fresh</em>, <em>healthy</em> and <em>tasty</em>.
                 </h6>
-                <p class="parallax-intro-copy">Made with only fresh fruits and the best quality ingredients, our smoothies are healthy, delicious and energizing.</p>
+                <p class="parallax-intro-copy">Made with only fresh fruits and the best quality ingredients, our smoothies are healthy, delicious and energizing. For non-diary options, all of our smoothie flavours are available as slushies without milk.</p>
             </div>
         </div>
 
@@ -300,12 +300,12 @@
                 <div class="divider"></div>
                 <span>Smoothies with bubble tea.</span>
                 <div class="pricing pricing-first">
-                    <span class="bold">Kids</span>
-                    <span>$3.99</span>
+                    <span class="bold">Small</span>
+                    <span>$4.49</span>
                 </div>
                 <div class="pricing">
                     <span class="bold">Regular</span>
-                    <span>$4.59</span>
+                    <span>$5.29</span>
                 </div>
                 <div class="color-circle purple"></div>
             </div>
@@ -317,16 +317,16 @@
                 <div class="divider"></div>
                 <span>Squeezed in store with fresh fruit.</span>
                 <div class="pricing pricing-first">
-                    <span class="bold">Kids</span>
-                    <span>$4.99</span>
-                </div>
-                <div class="pricing">
-                    <span class="bold">Medium</span>
+                    <span class="bold">Small</span>
                     <span>$5.99</span>
                 </div>
                 <div class="pricing">
-                    <span class="bold">Large</span>
+                    <span class="bold">Medium</span>
                     <span>$6.99</span>
+                </div>
+                <div class="pricing">
+                    <span class="bold">Large</span>
+                    <span>$7.59</span>
                 </div>
                 <div class="color-circle right pink"></div>
             </div>
@@ -387,12 +387,12 @@
                 <div class="divider"></div>
                 <span>Made with ice cream and bubble tea</span>
                 <div class="pricing pricing-first">
-                    <span class="bold">Kids</span>
-                    <span>$3.99</span>
+                    <span class="bold">Small</span>
+                    <span>$4.99</span>
                 </div>
                 <div class="pricing">
                     <span class="bold">Regular</span>
-                    <span>$5.99</span>
+                    <span>$6.99</span>
                 </div>
                 <div class="color-circle pink"></div>
             </div>
