--- a/menu.html
+++ b/menu.html
@@ -86,7 +86,7 @@
              <div class="menu-title">
                 <h4>Milk Tea</h4>
                 <div class="divider"></div>
-                <span>Milk with tea</span>
+                <span>A thick, rich and delicious beverage with black or green tea as base.</span>
                 <div class="pricing pricing-first">
                     <span class="bold">Regular</span>
                     <span>$4.59</span>
@@ -400,12 +400,14 @@
 
         <div class="column menu-section">
             <div class="menu-title">
-                <h4>Toppings</h4>
+                <h4>Toppings/Supplements</h4>
                 <div class="divider"></div>
-                <span>Add Toppings to any drink to add some fun in your drink!</span>
+                <span>Try our Toppings or Supplements for some more tasty fun in your drinks!</span>
                 <div class="pricing pricing-first">
-                    <span class="bold">Each</span>
+                    <span class="bold">Toppings</span>
                     <span>$0.50</span>
+                    <span class="bold">Supplements</span>
+                    <span>$1.00</span>
                 </div>
                 <div class="color-circle green"></div>
             </div>
@@ -430,6 +432,16 @@
                     <li>
                         <h5>Lychee Jelly</h5>
                     </li>
+                    <li>
+                         <h5>Protein</h5>
+                    </li>
+                    <li>
+                         <h5>Multivatamins</h5>
+                    </li>
+                    <li>
+                         <h5>Chia Seeds</h5>
+                    </li>
+
                 </ul>
             </div>
         </div>
