--- a/menu.html
+++ b/menu.html
@@ -385,7 +385,7 @@
             <div class="menu-title right">
                 <h4>Milk Shakes</h4>
                 <div class="divider"></div>
-                <span>Made with ice cream and bubble tea</span>
+                <span>Made with ice cream and delicious bubbles!</span>
                 <div class="pricing pricing-first">
                     <span class="bold">Small</span>
                     <span>$4.99</span>
@@ -406,8 +406,10 @@
                 <div class="pricing pricing-first">
                     <span class="bold">Toppings</span>
                     <span>$0.50</span>
+                    <p>
                     <span class="bold">Supplements</span>
                     <span>$1.00</span>
+                    </p>
                 </div>
                 <div class="color-circle green"></div>
             </div>
