--- a/index.html
+++ b/index.html
@@ -28,7 +28,17 @@
         </div>
     </div>
 
-    <h1 class="textbox"> COME FIND US! </h1>
+
+    <div style="margin-top: -10px" class="column menu-section">
+            <div class="menu-title">
+               <h4 style="text-align:center">HOLIDAY SPECIALS!</h4>
+               <p style="text-align:center">Cheers to the holiday season, enjoy heart-warming beverages from Big Orange at discount - Santa's Courtesy!</p>
+               <div style="margin-top:-30px; height:5%; margin-left:50%" class="color-circle right orange"></div>
+               <img class="poster" src="./images/christmas.png">
+           </div>
+    </div>
+
+    <h1 style="margin-top:-15px" class="textbox"> COME FIND US! </h1>
     <h5 class="textbox1" style="margin-top: -10px"> @ Masonville Place </h5>
     <h5 class="textbox1" style="margin-top: -20px"> London, ON </h5>
 
